one page carousel spacing fix

--- a/src/molecules/Carousel/Carousel.pcss
+++ b/src/molecules/Carousel/Carousel.pcss
@@ -1,5 +1,3 @@
-
-
 .telia-carousel {
     display: flex;
     flex-direction: column;
@@ -16,19 +14,20 @@
             overflow: hidden;
             display: flex;
             transition: transform 0.5s ease;
+            width: 100%;
 
             .slide {
                 opacity: 0;
                 min-width: 100%;
                 display: flex;
                 justify-content: center;
+                width: 100%;
 
                 .slide-items {
                     display: flex;
                     flex-direction: row;
                     justify-content: space-around;
                     min-width: 100%;
-                    max-width: 1244px;
                     margin: 1rem;
 
                     &--center {
